# openvr-simple-tracker-driver

./: CMakeLists.txt
simpletrackers/resources/input/tracker/: mytracker_chest_profile.json  mytracker_chest_remapping.json  mytracker_waist_profile.json  mytracker_waist_remapping.json
src/: device_provider.cpp  tracker_device_driver.h
